<resources>
  <string name="app_name">InteraApps</string>
  <string name="image">image</string>
  <string name="medicamento">Protetor Solar Corporal Neutrogena Sun\nFresh FPS90 120ml</string>
  <string name="merck">Neutrogena</string>
  <string name="average_price_x">Média Mercado:\nR$ %1$s</string>
  <string name="associated_price_x">Associado\nR$ %1$s</string>
  <string name="additional_price_x">+ R$ %1$s InteraCash</string>
  <string name="not_associated_price_x">Não Associado\u000D\nR$ %1$s</string>
  <string name="compare_and_prove">Compare e Comprove</string>
  <string name="not_associated">Não Associado</string>
  <string name="associated">Associado</string>
  <string name="cashback_x">R$%1$s de volta</string>
  <string name="product_details">Detalhes do produto</string>
  <string name="package_leaflet">Bula do medicamento</string>
  <string name="equivalent_drugs">Medicamentos equivalentes</string>
  <string name="also_check_it_out">Confira também</string>
  <string name="product_one_description"><![CDATA[O novo <b>Protetor Solar Neutrogena Sun Fresh FPS 90</b> entrega alta proteção com textura ultraleve e Oil Free. Sua fórmula surpreendentemente leve protege sua pele deixando-a hidratada e sequinha. Além disso, é super fácil de aplicar: desliza suavemente na pele, deixando-a leve e fresquinha e super hidratada, devido ao seu alto poder hidratante.<br/><br/>Com a sua tecnologia Heliplex, o Sun Fresh provine alta proteção imediata contra os raios UVA e UVB, deep UVA e Luz Visível, previnindo o envelhecimento e as manchas causadas pelo sol, devido ao seu poder antioxidante. Muito resistente à água e ao suor. Pele protegida, hidratada e sequinha.<br/><br/>Alta proteção invisível na pele. Formula ultra leve como hidratante, conseguindo ser ainda mais leve do que a anterior, sendo assim mais agradável de usar. Tenha a pele hidratada durante o dia todo. Produto com rápida absorção e fórmula Oil free, sendo muito resistente à água e ao suor.<br/><br/><b>Modo de Usar:</b><br/>Aplique abundantemente antes da exposição ao sol. É necessária a reaplicação do produto para manter sua efetividade. Reaplicar sempre, após sudorese intensa, nadar ou banhar-se, secar-se com toalha e durante a exposição ao sol. Para fechar, pressione o centro da tampa.]]></string>
  <string name="product_two_description"><![CDATA[<b>Para que serve:</b> Allegra é um anti-histamínico (medicamentos que tratam alergias) destinado ao tratamento das manifestações alérgicas, tais como rinite alérgica e urticária (erupção na pele, geralmente de origem alérgica, que causa coceira).<br/><br/><b>Composição:</b> Cada comprimido revestido contém 120 mg de cloridrato de fexofenadina equivalente a 112 mg de fexofenadina base.<br/><br/><b>Excipientes:</b> celulose microcristalina, amido de milho pré-gelatinizado, croscarmelose sódica, estearato de magnésio, hipromelose, povidona, dióxido de titânio, dióxido de silício, macrogol 400, composto de óxido de ferro rosa e composto de óxido de ferro amarelo.<br/><br/><b>Conteúdo da embalagem:</b> Comprimidos revestidos 120 mg: embalagem com 10.]]></string>
  <string name="product_one_caption">Protetor Solar Corporal Neutrogena Sun\nFresh FPS90 120ml</string>
  <string name="product_one_company">Neutrogena</string>
  <string name="product_two_caption_short">Allegra Pediátrico 6MG/ML</string>
  <string name="product_two_caption">Allegra Pediátrico 6MG/ML\nCloridrato de fexofenadina</string>
  <string name="product_two_company">Sanofi</string>
  <string name="add">Adicionar</string>
  <string name="dollar">R$ %1$s</string>
  <string name="best_price">Melhor preço</string>
  <string name="get_cashback_detail_info_x">Receba R$ %1$s de volta nesta compra. Válido somente para associados.</string>
  <string name="point_one_description">Quando vendemos produtos com preço tabelado você recebe uma parte do valor do produto de volta.</string>
  <string name="point_two_description">Após sua compra, você pode resgatar seu saldo de cashback a qualquer momento pelo aplicativo.</string>
  <string name="topic_header">A Intera mantém o compromisso de oferecer o menor preço do mercado. Por isso:</string>
  <string name="cash_back">Dinheiro de volta</string>
  <string name="product_out_of_stock">Produto esgotado</string>
  <string name="tell_me_when_it_arrives">Avise-me quando chegar</string>
  <string name="type_your_name">Digite seu nome</string>
  <string name="notify_me">Avise-me</string>
  <string name="we_will_notify_you_on">Iremos notificá-lo em %1$s</string>
  <string name="next_draw_of_x_in">Próximo sorteio de R$ 1000,00 em</string>
  <string name="hours">Horas</string>
  <string name="minutes">Minutos</string>
  <string name="seconds">Segundos</string>
  <string name="buy_and_participate">Compre e Participe</string>
  <string name="x_percent">%1$s%%</string>
  <string name="share_this_product">Compartilhe este produto</string>
  <string name="market_average">Média de Mercado</string>
  <string name="average_market_history">Histórico média do Mercado (R$)</string>
  <string name="price_history">Histórico de preços</string>
  <string name="product_added">Produto adicionado!</string>
  <string name="you_saved_x">Voce ecomomizou R$ %1$s</string>
  <string name="checkout">Finalizar Compra</string>
  <string name="keep_buying">Continuar Comprando</string>
  <string name="bag">Sacola</string>
  <string name="members_receive_x_on_this_purchase">Associados recebem R$ %1$s de volta nesta compra.</string>
  <string name="missing_x_for">Falta(m) R$ 40 para</string>
  <string name="free_shipping_caps">FRETE GRÁTIS&#160;</string>
  <string name="calculate_shipping">Calculas Frete</string>
  <string name="calculate_shipping_format">xxxxx - xxx</string>
  <string name="calculate">Calcular</string>
  <string name="express_shipping_x_up_to_y_hours">EXPRESS: R$ 10,00 até 4 horas</string>
  <string name="sedex_shipping_x_for_y_working_days">SEDEX: R$ 5,00 de 7 dias úteis</string>
  <string name="total_purchase_amount">Valor total da compra</string>
  <string name="associated_total">Total associado:</string>
  <string name="unassociated_total">Total não associado:</string>
  <string name="proceed_with_order">prosseguir com pedido</string>
  <string name="choose_your_best_option">Escolha sua melhor opção:</string>
  <string name="make_a_wish">Fazer pedido</string>
  <string name="your_bag_is_empty">Sua sacola está vazia</string>
  <string name="intera">Intera</string>
  <string name="favorite_label">S + T</string>
  <string name="help_24h">Ajuda 24h</string>
  <string name="profile">Perfil</string>
  <string name="hi_bruna">Olá, Bruna</string>
  <string name="hi_x">Olá, %1$s</string>
  <string name="my_interacash_balance">Meu saldo de InteraCash</string>
  <string name="transfer">Transferir</string>
  <string name="extract">Extrato</string>
  <string name="refer_a_friend">Indique um amigo</string>
  <string name="notifications">Notificações</string>
  <string name="favorites">Favoritos</string>
  <string name="forms_of_payment">Formas de pagamento</string>
  <string name="sweepstakes">Sorteios</string>
  <string name="requests">Pedidos</string>
  <string name="personal_data">Dados pessoais</string>
  <string name="qualidoc">Qualidoc</string>
  <string name="allow_fingerprint">Permitir biometria</string>
  <string name="cancel_account">Cancelar conta</string>
  <string name="edit_photo">Editar foto</string>
  <string name="addresses">Endereços</string>
  <string name="first_name">Primeiro nome</string>
  <string name="surname">Sobrenome</string>
  <string name="full_name">Nome completo</string>
  <string name="email">E-mail</string>
  <string name="cell_phone_with_ddd">Celular com DDD</string>
  <string name="cpf">CPF</string>
  <string name="password">Senha</string>
  <string name="repeat_password">Repetir senha</string>
  <string name="continue_">Continuar</string>
  <string name="hint_number">(99) 99999-9999</string>
  <string name="enter_your_cpf">Digite seu CPF</string>
  <string name="type_the_password">Digite a senha</string>
  <string name="type_the_password_again">Digite a senha novamente</string>
  <string name="add_address">Adicionar endereço</string>
  <string name="home">Casa</string>
  <string name="home_address">Rua Minas Gerais, 186</string>
  <string name="you_received_50_back_on_this_purchase">Você recebeu R$ 50,00 de volta nesta compra.</string>
  <string name="you_received_x_back_on_this_purchase">Você recebeu R$ %1$s de volta nesta compra.</string>
  <string name="sample_request_number">#7446005647478-01</string>
  <string name="request_date">Data do pedido</string>
  <string name="sample_request_date">01/01/2020</string>
  <string name="total">Total</string>
  <string name="sample_total_amount">R$ 107,71</string>
  <string name="details">Detalhes</string>
  <string name="ask_again">Pedir Novamente</string>
  <string name="help">Ajuda</string>
  <string name="request_detail">Detalhes do pedido</string>
  <string name="recipient">Destinatário</string>
  <string name="sample_recipient">Bruna Cerasi</string>
  <string name="address">Endereço</string>
  <string name="sample_payment_text">•••• 7055 (VISA)</string>
  <string name="form_of_payment">Forma de Pagamento&#160;</string>
  <string name="shipping_cost">Custo do frete</string>
  <string name="interacash">Interacash</string>
  <string name="cancel">Cancelar</string>
  <string name="do_you_confirm_the_new_order">Você confirma o novo pedido?</string>
  <string name="yes_i_confirm">Sim confirmo</string>
  <string name="service_available_24_hours_a_day">Atendimento disponível 24h por dia</string>
  <string name="how_can_we_help">Como podemos ajudar?</string>
  <string name="common_questions">Perguntas frequentes</string>
  <string name="advantages_of_being_associated">Vantágens em ser associado</string>
  <string name="how_to_load_my_wallet">Como carregar minha carteira</string>
  <string name="how_interacash_works">Como funciona o InteraCash</string>
  <string name="how_to_enter_the_draw">Como participar do sorteio</string>
  <string name="my_requests">Meus pedidos</string>
  <string name="track_my_order">Rastrear meu pedido</string>
  <string name="payment_questions">Dúvidas com o pagamento</string>
  <string name="cancel_order">Cancelar pedido</string>
  <string name="categories">Categorias</string>
  <string name="payments">Pagamentos</string>
  <string name="products_and_services">Produtos e serviços</string>
  <string name="policies_and_terms_of_use">Políticas e termos de uso</string>
  <string name="order_summary">Resumo do pedido</string>
  <string name="media_market_x">Media Mercado\nR$ %1$s</string>
  <string name="installment">Parcelamento</string>
  <string name="sample_installment_text">1 x de R$109,00 sem juros</string>
  <string name="delivery_man_on_his_way">O entregador está a caminho do local de entrega</string>
  <string name="saved_cards">Cartões salvos</string>
  <string name="add_payment_method">Adicionar forma de pagamento</string>
  <string name="debit_or_credit_card">Cartão de débito ou credito</string>
  <string name="google_pay">Google Pay</string>
  <string name="apple_pay">Apple Pay</string>
  <string name="money">Dinheiro</string>
  <string name="pic_pay">Picpay</string>
  <string name="safra_pay">Safrapay</string>
  <string name="ame_digital">Ame Digital</string>
  <string name="pay_pal">PayPal</string>
  <string name="card_data">Dados do Cartão</string>
  <string name="i_agree_to_terms_of_use">Concordo com os termos de uso</string>
  <string name="i_use_continuous_medication">Faço uso de medicamento contínuo</string>
  <string name="continuous_medication_usage_message">Ao assinalar que faz uso de medicamentos contínuos pediremos a indicação de qual(is) para enviar lembretes e promoções</string>
  <string name="enter_barcode">Digite código de barras</string>
  <string name="hint_enter_barcode">000 000 000 000 000 000 000 000</string>
  <string name="search">Buscar</string>
</resources>