<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <com.techmesystem.intera.base.view.CustomTextView
    android:id="@+id/ctv_address_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_8dp"
    app:ctv_mainText="@string/home_address"
    app:ctv_title="@string/home" />

  <Button
    style="@style/ButtonGhost"
    android:layout_marginStart="@dimen/margin_16dp"
    android:layout_marginTop="@dimen/margin_48dp"
    android:layout_marginEnd="@dimen/margin_16dp"
    android:text="@string/add_address" />

</LinearLayout>