<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/mainCoordinatorLayout_ids"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <FrameLayout
    android:id="@+id/fl_root_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/tl_bottom_navigation" />

  <com.google.android.material.tabs.TabLayout
    android:id="@+id/tl_bottom_navigation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:background="@color/color_f9f7ec"
    app:labelVisibilityMode="labeled"
    app:tabIndicatorColor="@color/transparent"
    app:tabIndicatorHeight="0dp"
    app:tabRippleColor="@color/color_e5e5e5"
    app:tabSelectedTextColor="@color/color_333333"
    app:tabTextAppearance="@style/CustomTabText"
    app:tabTextColor="@color/color_999999"
    app:tabUnboundedRipple="true">

    <com.google.android.material.tabs.TabItem
      android:id="@+id/navigation_home"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:icon="@drawable/home_icon"
      android:text="@string/intera" />

    <com.google.android.material.tabs.TabItem
      android:id="@+id/navigation_favorite"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:icon="@drawable/favorite_icon"
      android:text="@string/favorite_label" />

    <com.google.android.material.tabs.TabItem
      android:id="@+id/navigation_help"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:icon="@drawable/help_icon"
      android:text="@string/help_24h" />

    <com.google.android.material.tabs.TabItem
      android:id="@+id/navigation_checkout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:icon="@drawable/checkout_icon"
      android:text="@string/bag" />

    <com.google.android.material.tabs.TabItem
      android:id="@+id/navigation_profile"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:icon="@drawable/profile_icon"
      android:text="@string/profile" />
  </com.google.android.material.tabs.TabLayout>

  <View
    style="@style/ShadowTop"
    android:layout_above="@+id/tl_bottom_navigation" />
</RelativeLayout>