<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white">

  <com.techmesystem.intera.base.view.InteraToolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:backNavigationDrawable="@drawable/ic_back_arrow"
    app:backgroundColor="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:toolbarElevation="0"
    app:toolbarTitle="@string/card_data" />

  <View
    android:id="@+id/v_top_shadow"
    style="@style/ShadowBottom"
    android:layout_marginStart="@dimen/margin_8dp"
    android:layout_marginEnd="@dimen/margin_8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/toolbar" />

  <TextView
    android:id="@+id/tv_enter_barcode_header"
    style="@style/Text14WrapWrap"
    android:layout_marginStart="@dimen/margin_16dp"
    android:layout_marginTop="@dimen/margin_14dp"
    android:text="@string/enter_barcode"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar" />

  <TextView
    android:id="@+id/tv_enter_barcode"
    style="@style/Text14MatchWrap"
    android:layout_marginStart="@dimen/margin_16dp"
    android:layout_marginTop="@dimen/margin_8dp"
    android:layout_marginEnd="@dimen/margin_16dp"
    android:background="@drawable/ripple_bg_rounded_corners"
    android:hint="@string/hint_enter_barcode"
    android:padding="@dimen/margin_16dp"
    android:stateListAnimator="@animator/scale_on_touch"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_enter_barcode_header" />

  <Button
    android:id="@+id/btn_search"
    style="@style/ButtonPrimary"
    android:layout_marginStart="@dimen/margin_16dp"
    android:layout_marginTop="@dimen/margin_56dp"
    android:layout_marginEnd="@dimen/margin_16dp"
    android:text="@string/search"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_enter_barcode" />
</androidx.constraintlayout.widget.ConstraintLayout>